@startuml

title __MODEL's Class Diagram__\n

  namespace com.galaxybank {
    namespace model {
      class com.galaxybank.model.ATM {
          ~ balance : double
          ~ id : long
          ~ location : String
          ~ transactions : List<Transaction>
          + getBalance()
          + getBank()
          + getId()
          + getLocation()
          + getTransactions()
          + setBalance()
          + setBank()
          + setId()
          + setLocation()
          + setTransactions()
          + toString()
      }
    }
  }
  

  namespace com.galaxybank {
    namespace model {
      class com.galaxybank.model.Account {
          ~ balance : double
          ~ cards : List<Card>
          ~ id : long
          + getAccountType()
          + getBalance()
          + getCards()
          + getCustomer()
          + getId()
          + setAccountType()
          + setBalance()
          + setCards()
          + setCustomer()
          + setId()
          + toString()
      }
    }
  }
  

  namespace com.galaxybank {
    namespace model {
      enum AccountType {
        CURRENT
        SAVING
      }
    }
  }
  

  namespace com.galaxybank {
    namespace model {
      class com.galaxybank.model.AdminUser {
          ~ id : long
          - email : String
          - name : String
          - password : String
          - surname : String
          - username : String
          + getEmail()
          + getId()
          + getName()
          + getPassword()
          + getSurname()
          + getUsername()
          + setEmail()
          + setId()
          + setName()
          + setPassword()
          + setSurname()
          + setUsername()
          + toString()
      }
    }
  }
  

  namespace com.galaxybank {
    namespace model {
      class com.galaxybank.model.Bank {
          ~ address : String
          ~ atmList : List<ATM>
          ~ customers : List<Customer>
          ~ id : long
          ~ name : String
          ~ swiftCode : String
          + getAddress()
          + getAtmList()
          + getCustomers()
          + getId()
          + getName()
          + getSwiftCode()
          + setAddress()
          + setAtmList()
          + setCustomers()
          + setId()
          + setName()
          + setSwiftCode()
          + toString()
      }
    }
  }
  

  namespace com.galaxybank {
    namespace model {
      class com.galaxybank.model.Card {
          ~ expiringDate : Date
          ~ id : long
          ~ securityCd : String
          ~ transactions : List<Transaction>
          + getAccount()
          + getExpiringDate()
          + getId()
          + getSecurityCd()
          + getTransactions()
          + setAccount()
          + setExpiringDate()
          + setId()
          + setSecurityCd()
          + setTransactions()
          + toString()
      }
    }
  }
  

  namespace com.galaxybank {
    namespace model {
      class com.galaxybank.model.Customer {
          ~ accounts : List<Account>
          ~ address : String
          ~ id : long
          ~ name : String
          ~ phone : String
          + getAccounts()
          + getAddress()
          + getBank()
          + getId()
          + getName()
          + getPhone()
          + setAccounts()
          + setAddress()
          + setBank()
          + setId()
          + setName()
          + setPhone()
          + toJson()
          + toString()
      }
    }
  }
  

  namespace com.galaxybank {
    namespace model {
      class com.galaxybank.model.Transaction {
          ~ amount : double
          ~ id : long
          ~ transactionDate : Date
          + getAmount()
          + getAtm()
          + getCard()
          + getId()
          + getTransactionDate()
          + getTransactionType()
          + setAmount()
          + setAtm()
          + setCard()
          + setId()
          + setTransactionDate()
          + setTransactionType()
          + toString()
      }
    }
  }
  

  namespace com.galaxybank {
    namespace model {
      enum TransactionType {
        CHECK_BALANCE
        DEPOSIT
        WITHDRAWN
      }
    }
  }
  

  com.galaxybank.model.ATM o-- com.galaxybank.model.Bank : bank
  com.galaxybank.model.Account o-- com.galaxybank.model.AccountType : accountType
  com.galaxybank.model.Account o-- com.galaxybank.model.Customer : customer
  com.galaxybank.model.Card o-- com.galaxybank.model.Account : account
  com.galaxybank.model.Customer o-- com.galaxybank.model.Bank : bank
  com.galaxybank.model.Transaction o-- com.galaxybank.model.ATM : atm
  com.galaxybank.model.Transaction o-- com.galaxybank.model.Card : card
  com.galaxybank.model.Transaction o-- com.galaxybank.model.TransactionType : transactionType


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
